frontend/second
[eval]:1
const {MarkdownParser} = require(@lezer/markdown); const {parser} = require(@lezer/markdown); const doc = 
                                 ^

SyntaxError: Invalid or unexpected token
    at makeContextifyScript (node:internal/vm:185:14)
    at node:internal/process/execution:107:22
    at [eval]-wrapper:6:24
    at runScript (node:internal/process/execution:101:62)
    at evalScript (node:internal/process/execution:133:3)
    at node:internal/main/eval_string:51:3

Node.js v20.19.4
